<resources>
    <string name="app_name">앱 연습</string>
    <string name="main_title">앱 연습</string>
    <string name="login_title">로그인</string>
    <string name="idLB">아이디</string>
    <string name="pwLB">패스워드</string>
    <string name="idHint">아이디를 입력하세요.</string>
    <string name="pwHint">패스워드를 입력하세요.</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="idCheck">중복 체크</string>
    <string name="m_name">이름</string>
    <string name="m_number">휴대폰 번호</string>
    <string name="m_address">주소</string>
    <string name="m_gender">성별</string>
    <string name="m_gender_man">남성</string>
    <string name="m_gender_woman">여성</string>
    <string name="signUp">회원가입</string>
    <string name="cancel">취소</string>
    <string name="title">애완동물 소개</string>
    <string name="before">이전</string>
    <string name="after">다음</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="title2">애완동물 사진첩</string>
</resources>