<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:text="@string/title"
                android:textSize="30sp" />

            <RelativeLayout
                android:id="@+id/RelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <RelativeLayout
                    android:id="@+id/relLay"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgView"
                        android:layout_width="wrap_content"
                        android:layout_height="300dp"
                        android:layout_centerInParent="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/petSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relLay"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/button3"
                    android:layout_toLeftOf="@id/button2"
                    android:text="@string/btn1" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/button3"
                    android:layout_toLeftOf="@id/button3"
                    android:text="@string/btn2" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/petSort"
                    android:layout_centerHorizontal="true"
                    android:text="@string/btn3" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/button3"
                    android:layout_toRightOf="@id/button3"
                    android:text="@string/btn4" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/button3"
                    android:layout_toRightOf="@id/button4"
                    android:text="@string/btn5" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/beforeBtn"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50dp"
                    android:text="@string/before" />

                <Button
                    android:id="@+id/afterBtn"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="50dp"
                    android:text="@string/after" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>